--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "nodemon": "^2.0.18",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "swagger-ui-express": "^4.4.0"
   }
 }
