--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.4.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "jquery": "^3.6.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.18",
     "pg": "^8.7.3",
