--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "NODE_ENV=development nodemon index.js"
   },
   "author": "",
   "license": "ISC",
